--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,10 @@ jobs:
         # connection timeout to remote host
         connect_timeout: 30
         # execute commands on ssh
-        script: whoami
+        script: |
+          cd /root/smashmath-frontend
+          git pull
+          pm2 stop npm -- start
+          pm2 start npm -- start
+
+
