--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-hot-toast": "^2.4.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.8.1",
-    "react-toastify": "^9.1.2"
+    "react-toastify": "^9.1.2",
+    "recharts": "^2.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
