--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,14 @@ jobs:
         connect_timeout: 30
         # execute commands on ssh
         script: |
-          cd /root/smashmath-frontend
-          git pull
+          cd /root/
+          rm -rf smashmath-frontend
+          git clone https://github.com/TechLev/smashmath-frontend smashmath-frontend
+          cd smashmath-frontend
+          git checkout master
           npm run build
-          pm2 restart npm -- start
+          pm2 delete dev
+          pm2 start 'npm start' --name dev
+
 
 
