--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,8 @@ jobs:
           git checkout master
           npm install --include=dev
           npm run build
-          pm2 delete dev
-          pm2 start 'npm start' --name dev
+          pm2 delete prod
+          pm2 start 'npm start' --name prod
 
 
 
