--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           cd smashmath-frontend
           npm install --include=dev
           npm run build
-          pm2 delete prod || pm2 start 'npm start' --name prod
+          pm2 delete prod; pm2 start 'npm start' --name prod
           
 
 
