--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -34,7 +34,6 @@ jobs:
           cd dev.smashmath-frontend
           git checkout dev
           npm install --include=dev
-          npm run build
-          pm2 delete dev; pm2 start 'npm start' --name dev
+          pm2 delete dev; pm2 start 'npm run dev' --name dev
 
 
