--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_REACT_APP_API_BASE_URL_DEV = "https://dev.smashmath.api.datumlabs.io/api"
-VITE_REACT_APP_API_BASE_URL_PRD = "https://dev.smashmath.api.datumlabs.io/api"
+VITE_REACT_APP_API_BASE_URL_PRD = "https://prd.smashmath.api.datumlabs.io/api"
